--- a/app/src/main/res/layout/dialog_guess.xml
+++ b/app/src/main/res/layout/dialog_guess.xml
@@ -40,6 +40,7 @@
                     android:src="@drawable/ic_title_guess" />
 
                 <TextView
+                    android:id="@+id/tv_note_guess"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
