--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -504,4 +504,14 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="MyGuessTab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorHeight">2.5dp</item>
+        <item name="tabBackground">@color/white</item>
+        <item name="tabIndicatorColor">#ffd634</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#40000000</item>
+        <item name="android:textStyle">bold</item>
+        <item name="tabSelectedTextColor">#323232</item>
+    </style>
+
 </resources>
