--- a/app/src/main/res/layout/fragment_myguess.xml
+++ b/app/src/main/res/layout/fragment_myguess.xml
@@ -16,5 +16,6 @@
         android:id="@+id/vp_my_guess"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:overScrollMode="never" />
 </LinearLayout>
