--- a/app/src/main/res/layout/activity_flop.xml
+++ b/app/src/main/res/layout/activity_flop.xml
@@ -120,6 +120,7 @@
                         android:id="@+id/tv_note_flop"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
                         android:background="@drawable/bg_note_flop"
                         android:gravity="center"
                         android:padding="12dp"
@@ -128,10 +129,22 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_start_flop"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/ic_start_flop"
+                        android:gravity="center"
+                        android:padding="12dp"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+
+                    <TextView
                         android:id="@+id/tv_benlun_flop"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:background="@drawable/bg_note_flop"
                         android:gravity="center"
                         android:padding="12dp"
