--- a/app/src/main/res/layout/activity_flop.xml
+++ b/app/src/main/res/layout/activity_flop.xml
@@ -52,7 +52,6 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/tv_price_tips"
-                    android:text="8000"
                     android:textColor="#FFC81F"
                     android:textSize="14sp" />
 
@@ -81,7 +80,6 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="34dp"
-                    android:text="8000"
                     android:textColor="#FFC81F"
                     android:textSize="15sp" />
 
@@ -112,42 +110,64 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="115dp"
+                    android:layout_marginTop="-20dp"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp">
 
                     <TextView
                         android:id="@+id/tv_note_flop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
+                        android:layout_width="51dp"
+                        android:layout_height="57dp"
+                        android:layout_marginTop="45dp"
                         android:background="@drawable/bg_note_flop"
                         android:gravity="center"
-                        android:padding="12dp"
                         android:text="规则\n说明"
                         android:textColor="@color/white"
                         android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/tv_start_flop"
+                    <RelativeLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/ic_start_flop"
-                        android:gravity="center"
-                        android:padding="12dp"
-                        android:textColor="@color/white"
-                        android:textSize="14sp" />
+                        android:layout_height="match_parent"
+                        android:layout_centerInParent="true">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/bg_start_flop" />
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true">
+
+                            <ImageView
+                                android:id="@+id/tv_start_flop"
+                                android:layout_width="103dp"
+                                android:layout_height="104dp"
+                                android:layout_alignParentBottom="true"
+                                android:layout_centerHorizontal="true"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/ic_start_flop" />
+
+                            <ImageView
+                                android:layout_width="33dp"
+                                android:layout_height="35dp"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="57dp"
+                                android:src="@drawable/ic_xipai_flop" />
+                        </RelativeLayout>
+
+                    </RelativeLayout>
 
                     <TextView
                         android:id="@+id/tv_benlun_flop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="51dp"
+                        android:layout_height="57dp"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
+                        android:layout_marginTop="45dp"
                         android:background="@drawable/bg_note_flop"
                         android:gravity="center"
-                        android:padding="12dp"
                         android:text="本轮\n奖品"
                         android:textColor="@color/white"
                         android:textSize="14sp" />
