--- a/app/src/main/res/layout/item_3_guess_rank.xml
+++ b/app/src/main/res/layout/item_3_guess_rank.xml
@@ -23,17 +23,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/ll_center">
 
-        <com.whzl.mengbi.ui.widget.view.CircleImageView
-            android:id="@+id/iv_2_guess_rank"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="14.5dp"
-            app:civ_border_color="#afb3be"
-            app:civ_border_width="1.5dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
             android:id="@+id/tv_nick_2_guess_rank"
             android:layout_width="wrap_content"
@@ -52,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
+            android:drawablePadding="5dp"
             android:textColor="@color/white"
             android:textSize="13sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -59,10 +49,22 @@
             app:layout_constraintTop_toBottomOf="@id/tv_nick_2_guess_rank" />
 
         <ImageView
-            android:layout_width="25.5dp"
-            android:layout_height="23.5dp"
+            android:layout_width="23.5dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="3dp"
             android:src="@drawable/ic_2_guess_rank"
             app:layout_constraintLeft_toLeftOf="@id/iv_2_guess_rank"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.whzl.mengbi.ui.widget.view.CircleImageView
+            android:id="@+id/iv_2_guess_rank"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="14.5dp"
+            app:civ_border_color="#afb3be"
+            app:civ_border_width="1.5dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
@@ -83,17 +85,6 @@
             android:layout_height="match_parent"
             android:visibility="invisible">
 
-            <com.whzl.mengbi.ui.widget.view.CircleImageView
-                android:id="@+id/iv_1_guess_rank"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="15dp"
-                app:civ_border_color="#fcd139"
-                app:civ_border_width="1.5dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <TextView
                 android:id="@+id/tv_nick_1_guess_rank"
                 android:layout_width="wrap_content"
@@ -112,6 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:drawablePadding="5dp"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -119,11 +111,22 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_nick_1_guess_rank" />
 
             <ImageView
-                android:layout_width="25.5dp"
-                android:layout_height="23.5dp"
-                android:layout_marginTop="3dp"
+                android:layout_width="23.5dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="5dp"
                 android:src="@drawable/ic_1_guess_rank"
                 app:layout_constraintLeft_toLeftOf="@id/iv_1_guess_rank"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.whzl.mengbi.ui.widget.view.CircleImageView
+                android:id="@+id/iv_1_guess_rank"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                app:civ_border_color="#fcd139"
+                app:civ_border_width="1.5dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
@@ -138,17 +141,6 @@
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintLeft_toRightOf="@id/ll_center"
         app:layout_constraintRight_toRightOf="parent">
-
-        <com.whzl.mengbi.ui.widget.view.CircleImageView
-            android:id="@+id/iv_3_guess_rank"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="14.5dp"
-            app:civ_border_color="#c18f76"
-            app:civ_border_width="1.5dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_nick_3_guess_rank"
@@ -168,6 +160,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
+            android:drawablePadding="5dp"
             android:textColor="@color/white"
             android:textSize="13sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -175,16 +168,29 @@
             app:layout_constraintTop_toBottomOf="@id/tv_nick_3_guess_rank" />
 
         <ImageView
-            android:layout_width="25.5dp"
-            android:layout_height="23.5dp"
+            android:layout_width="23.5dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="3dp"
             android:src="@drawable/ic_3_guess_rank"
             app:layout_constraintLeft_toLeftOf="@id/iv_3_guess_rank"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.whzl.mengbi.ui.widget.view.CircleImageView
+            android:id="@+id/iv_3_guess_rank"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="14.5dp"
+            app:civ_border_color="#c18f76"
+            app:civ_border_width="1.5dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
     <ImageView
         android:layout_width="8dp"
         android:layout_height="82.5dp"
+        android:scaleType="fitXY"
         android:src="@drawable/ic_left_guess_rank"
         app:layout_constraintRight_toLeftOf="@id/ll_center"
         app:layout_constraintTop_toTopOf="@id/ll_left" />
@@ -192,6 +198,7 @@
     <ImageView
         android:layout_width="8dp"
         android:layout_height="82.5dp"
+        android:scaleType="fitXY"
         android:src="@drawable/ic_right_guess_rank"
         app:layout_constraintLeft_toRightOf="@id/ll_center"
         app:layout_constraintTop_toTopOf="@id/ll_left" />
