--- a/app/src/main/res/layout/fragment_guess_rank.xml
+++ b/app/src/main/res/layout/fragment_guess_rank.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:srlEnableLoadMore="false"
+    app:srlEnableOverScrollDrag="true"
+    app:srlEnableRefresh="false">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_guess_rank"
@@ -10,4 +14,4 @@
         android:layout_height="match_parent"
         android:layout_marginTop="24dp"
         android:overScrollMode="never" />
-</LinearLayout>
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
