--- a/app/src/main/res/layout/item_my_guess.xml
+++ b/app/src/main/res/layout/item_my_guess.xml
@@ -82,8 +82,11 @@
 
             <TextView
                 android:id="@+id/tv_theme_my_guess"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="50dp"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:textColor="#000000"
                 android:textSize="15sp" />
 
