--- a/app/src/main/res/layout/popwindow_benlun_flop.xml
+++ b/app/src/main/res/layout/popwindow_benlun_flop.xml
@@ -7,7 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_benlun"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:background="@drawable/bg_benlun_flop"
