--- a/app/src/main/res/layout/activity_flop.xml
+++ b/app/src/main/res/layout/activity_flop.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#14111b"
@@ -18,10 +19,36 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_top_flop" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_cover_flop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_top_flop"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <FrameLayout
+                    android:layout_width="192dp"
+                    android:layout_height="35dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bg_flipper_flop"
+                    app:layout_constraintBottom_toBottomOf="@id/iv_cover_flop"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent">
+
+                    <ViewFlipper
+                        android:id="@+id/flipper_flop"
+                        android:layout_width="192dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="5dp"
+                        android:inAnimation="@anim/flipper_in_flop"
+                        android:outAnimation="@anim/flipper_out_flop" />
+                </FrameLayout>
+
+            </android.support.constraint.ConstraintLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
