--- a/app/src/main/res/layout/item_pk_follow.xml
+++ b/app/src/main/res/layout/item_pk_follow.xml
@@ -1,36 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="1dp"
-    android:layout_marginRight="1dp">
+    android:layout_height="wrap_content">
 
-    <com.whzl.mengbi.ui.widget.view.CircleRelativeLayout
-        android:id="@+id/circle_head"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/shape_online_head_civilian">
+    <com.whzl.mengbi.ui.widget.view.CircleImageView
+        android:id="@+id/iv_circle_head"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        app:civ_border_color="#ff4676"
+        app:civ_border_width="1dp" />
 
-        <com.whzl.mengbi.ui.widget.view.CircleImageView
-            android:id="@+id/iv_circle_head"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="1dp" />
-
-        <ImageView
-            android:id="@+id/iv_pk_level"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" />
-
-    </com.whzl.mengbi.ui.widget.view.CircleRelativeLayout>
 
     <TextView
         android:id="@+id/tv_pk_count"
         android:layout_width="24.5dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/circle_head"
         android:layout_marginTop="2dp"
         android:gravity="center"
         android:singleLine="true"
