--- a/app/src/main/res/layout/layout_pk_new.xml
+++ b/app/src/main/res/layout/layout_pk_new.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="46dp">
 
     <RelativeLayout
         android:id="@+id/rl_pk_progress"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:background="@drawable/pk_background">
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/pk_background"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,13 +60,13 @@
                     android:background="@drawable/shape_pk_progress">
 
                     <!--<ProgressBar-->
-                        <!--android:id="@+id/pb_pk"-->
-                        <!--style="@style/StyleProgressBarMini"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="18dp"-->
-                        <!--android:background="@drawable/shape_pk_progress"-->
-                        <!--android:max="100"-->
-                        <!--android:progress="50" />-->
+                    <!--android:id="@+id/pb_pk"-->
+                    <!--style="@style/StyleProgressBarMini"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="18dp"-->
+                    <!--android:background="@drawable/shape_pk_progress"-->
+                    <!--android:max="100"-->
+                    <!--android:progress="50" />-->
                     <com.whzl.mengbi.ui.widget.view.PkProgressView
                         android:id="@+id/pb_pk"
                         android:layout_width="match_parent"
@@ -124,12 +127,33 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="点击打开助力粉丝榜"
                         android:textColor="@color/white"
-                        android:textSize="10sp"/>
+                        android:textSize="10sp" />
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_my_follow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/rl_pk_progress"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_opposite_side"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/rl_pk_progress"
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
 
