--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -23,11 +23,9 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:background="#70000000">
+                android:layout_height="250dp">
 
                 <ImageButton
                     android:id="@+id/btn_back"
