--- a/app/src/main/res/layout/item_pk_opposite.xml
+++ b/app/src/main/res/layout/item_pk_opposite.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="25dp"
+    android:layout_height="27dp"
+    android:layout_marginLeft="3dp"
+    android:layout_marginRight="3dp">
 
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
         android:id="@+id/iv_circle_head"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_margin="1dp"
         app:civ_border_color="#2da8ee"
         app:civ_border_width="1dp" />
 
 
     <TextView
         android:id="@+id/tv_pk_count"
-        android:layout_width="24.5dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/shape_pk_opposite"
+        android:paddingLeft="4.5dp"
+        android:paddingRight="4.5dp"
         android:singleLine="true"
-        android:textColor="#fffffe"
-        android:textSize="8sp" />
+        android:textColor="@color/white"
+        android:textSize="6.5sp"
+        android:textStyle="bold" />
 </RelativeLayout>
