--- a/app/src/main/res/layout/layout_pk_new.xml
+++ b/app/src/main/res/layout/layout_pk_new.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="46dp">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/rl_pk_progress"
@@ -141,7 +141,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="21dp"
         app:layout_constraintBottom_toBottomOf="@id/rl_pk_progress"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -152,7 +152,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="21dp"
         app:layout_constraintBottom_toBottomOf="@id/rl_pk_progress"
         app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
